fix direction disable flag handling update scrollbar to the correct menu container fix menu height on mobile

--- a/src/scss/includes/menu.scss
+++ b/src/scss/includes/menu.scss
@@ -21,18 +21,22 @@
 .menu__panel {
   position: absolute;
   width: 400px;
-  height: 100vh;
+  height: 100%;
   right: -400px;
   transition: right .3s;
-  overflow-y: auto;
   background: #fff;
+}
+
+.menu__panel__items_container {
+  overflow-y: auto;
+  height: calc(100% - 100px);
+  padding-top: 40px;
 }
 
 .menu__panel__top {
   width: 100%;
   height: 100px;
   background: $primary_text;
-  margin-bottom: 40px;
 }
 
 .menu__panel__top__close {
